refactor(sy-datepicker): octanify and fix tests

--- a/app/components/sy-calendar/template.hbs
+++ b/app/components/sy-calendar/template.hbs
@@ -1,12 +1,15 @@
-{{#let (assign this.publicAPI (hash
-  nav=(component this.navComponent calendar=(readonly this.publicAPI) onCenterChange=(readonly this.onCenterChange))
-  days=(component this.daysComponent calendar=(readonly this.publicAPI) onSelect=(readonly this.onSelect))
-)) as |calendar|}}
-  <calendar.nav>
+<PowerCalendar
+  ...attributes
+  @onSelect={{@onSelect}}
+  @selected={{@selected}}
+  @center={{@center}}
+  @onCenterChange={{@onCenterChange}} as |calendar|
+>
+  <calendar.Nav>
     <span class="nav-select-month">
       {{#let (moment-format calendar.center 'MMMM') as |currentMonth|}}
         {{currentMonth}}
-        <select onchange={{action 'changeCenter' 'month'}}>
+        <select aria-label="Month" {{ on "change" (fn this.changeCenter "month" calendar) }}>
           {{#each this.months as |month|}}
             <option value={{month}} selected={{eq month currentMonth}}>{{month}}</option>
           {{/each}}
@@ -16,13 +19,13 @@
     <span class="nav-select-year">
       {{#let (moment-format calendar.center 'YYYY') as |currentYear|}}
         {{currentYear}}
-        <select onchange={{action 'changeCenter' 'year'}}>
+        <select aria-label="Year" {{on "change" (fn this.changeCenter "year" calendar)}}>
           {{#each this.years as |year|}}
             <option value={{year}} selected={{eq year currentYear}}>{{year}}</option>
           {{/each}}
         </select>
       {{/let}}
     </span>
-  </calendar.nav>
-  {{calendar.days}}
-{{/let}}
+  </calendar.Nav>
+  <calendar.Days/>
+</PowerCalendar>
