refactor(sy-modal): refactor to glimmer

--- a/app/components/sy-modal/header/template.hbs
+++ b/app/components/sy-modal/header/template.hbs
@@ -1,4 +1,6 @@
-{{yield}}
-<button type="button" class="close" aria-label="Close" {{action this.close}}>
-  <span aria-hidden="true">&times;</span>
-</button>
+<div ...attributes class="modal-header">
+  {{yield}}
+  <button type="button" class="close" aria-label="Close" {{on "click" @close}}>
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
