--- a/app/components/sy-modal/template.hbs
+++ b/app/components/sy-modal/template.hbs
@@ -1,6 +1,6 @@
 <EmberWormhole @to="sy-modals">
   <SyModal::Overlay @visible={{@visible}} @on-close={{this.close}}>
-    <div class="modal-dialog {{if this.size (concat 'modal-dialog--' this.size)}}">
+    <div class="modal-dialog {{if @size (concat 'modal-dialog--' @size)}}">
       {{yield (hash
         header = (component 'sy-modal/header' close=this.close)
         body   = (component 'sy-modal/body'   close=this.close)
