refactor(tracking-view): refactor to octane

--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -2,14 +2,14 @@
 <div>
   <div class="grid grid--12of12">
     <div class="grid-cell grid-cell-sm--6of12">
-      <h1 class="no-margin">{{moment-format this.model 'dddd, DD.MM.YYYY'}}</h1>
+      <h1 class="no-margin">{{moment-format @model "dddd, DD.MM.YYYY"}}</h1>
     </div>
     <div class="grid-cell grid-cell-sm--6of12 grid-cell--align-center">
       <DateNavigation @current={{this.date}} @onChange={{fn (mut this.date)}} />
     </div>
     <div class="grid-cell visible-md">
       <WeeklyOverview @expected={{this.expectedWorktime}}>
-        {{#each this.weeklyOverviewData.lastSuccessful.value as |d|}}
+        {{#each this.weeklyOverviewData as |d|}}
           <WeeklyOverviewDay
             @day={{d.day}}
             @active={{d.active}}
@@ -18,22 +18,25 @@
             @absence={{d.absence}}
             @holiday={{d.holiday}}
             @prefix={{d.prefix}}
-            @on-click={{fn (mut this.date)}}
-            data-test-weekly-overview-day={{moment-format d.day 'DD'}}
+            @on-click={{(fn (mut this.date))}}
+            data-test-weekly-overview-day={{moment-format d.day "DD"}}
           />
         {{/each}}
       </WeeklyOverview>
     </div>
     <div class="grid-cell hidden-sm">
       <div class="btn-group btn-group--vertical">
-        <LinkTo @route="index.activities" @tagName="button" @type="button" class="btn">
-          Activities <span class="badge">{{humanize-duration this.activitySum true}}</span>
+        <LinkTo @route="index.activities" @tagName="button" class="btn">
+          Activities
+          <span class="badge">{{humanize-duration this.activitySum true}}</span>
         </LinkTo>
-        <LinkTo @route="index.attendances" @tagName="button" @type="button" class="btn">
-          Attendances <span class="badge">{{humanize-duration this.attendanceSum}}</span>
+        <LinkTo @route="index.attendances" @tagName="button" class="btn">
+          Attendances
+          <span class="badge">{{humanize-duration this.attendanceSum}}</span>
         </LinkTo>
-        <LinkTo @route="index.reports" @tagName="button" @type="button" class="btn">
-          Timesheet <span class="badge">{{humanize-duration this.reportSum}}</span>
+        <LinkTo @route="index.reports" @tagName="button" class="btn">
+          Timesheet
+          <span class="badge">{{humanize-duration this.reportSum}}</span>
         </LinkTo>
         {{#if this.absence}}
           <button
@@ -41,37 +44,43 @@
             data-test-edit-absence
             class="btn btn-warning"
             disabled={{cannot "access page"}}
-            {{action (toggle 'showEditModal' this)}}
+            {{on "click" (toggle "showEditModal" this)}}
           >
             {{this.absence.absenceType.name}}
           </button>
         {{/if}}
-          <button
-            type="button"
-            data-test-add-absence
-            class="btn btn-default"
-            disabled={{cannot "access page"}}
-            {{action (toggle 'showAddModal' this)}}
-          >
-            Add absence
-          </button>
+        <button
+          type="button"
+          data-test-add-absence
+          class="btn btn-default"
+          disabled={{cannot "access page"}}
+          {{on "click" (toggle "showAddModal" this)}}
+        >
+          Add absence
+        </button>
       </div>
     </div>
     <div class="grid-cell visible-sm">
       <ul class="nav-tabs">
         <li>
           <LinkTo @route="index.activities">
-            Activities <span class="badge">{{humanize-duration this.activitySum true}}</span>
+            Activities
+            <span class="badge">{{humanize-duration
+                this.activitySum
+                true
+              }}</span>
           </LinkTo>
         </li>
         <li>
           <LinkTo @route="index.attendances">
-            Attendances <span class="badge">{{humanize-duration this.attendanceSum}}</span>
+            Attendances
+            <span class="badge">{{humanize-duration this.attendanceSum}}</span>
           </LinkTo>
         </li>
         <li>
           <LinkTo @route="index.reports">
-            Timesheet <span class="badge">{{humanize-duration this.reportSum}}</span>
+            Timesheet
+            <span class="badge">{{humanize-duration this.reportSum}}</span>
           </LinkTo>
         </li>
         <li class="nav-tab--buttons">
@@ -80,20 +89,20 @@
               type="button"
               data-test-edit-absence
               class="btn btn-warning"
-              {{action (toggle 'showEditModal' this)}}
+              {{on "click" (toggle "showEditModal" this)}}
             >
               {{this.absence.absenceType.name}}
             </button>
           {{/if}}
-            <button
-              type="button"
-              data-test-add-absence
-              class="btn btn-default"
-              disabled={{cannot "access page"}}
-              {{action (toggle 'showAddModal' this)}}
-            >
-              Add absence
-            </button>
+          <button
+            type="button"
+            data-test-add-absence
+            class="btn btn-default"
+            disabled={{cannot "access page"}}
+            {{on "click" (toggle "showAddModal" this)}}
+          >
+            Add absence
+          </button>
         </li>
       </ul>
     </div>
@@ -106,73 +115,144 @@
 </div>
 
 {{#if this.absence}}
-  {{#with (changeset this.absence this.AbsenceValidations) as |changeset|}}
-    <SyModal @size='auto' @visible={{this.showEditModal}} @on-close={{action 'rollback' changeset}} as |modal|>
-      <ValidatedForm  @model={{changeset}} @on-submit={{route-action "saveAbsence" changeset}} as |f|>
+  {{#let (changeset this.absence this.AbsenceValidations) as |changeset|}}
+    <SyModal
+      @size="auto"
+      @visible={{this.showEditModal}}
+      @on-close={{queue
+        (toggle "showEditModal" this)
+        (fn this.rollback changeset)
+      }}
+      as |modal|
+    >
+      <div data-test-edit-absence-form>
+        <ValidatedForm
+          @model={{changeset}}
+          @on-submit={{fn this.saveAbsence changeset}}
+          as |f|
+        >
+          <modal.header>
+            Edit absence
+          </modal.header>
+          <modal.body>
+            <f.input @name="absenceType" as |fi|>
+              <div class="btn-group btn-group--auto">
+                {{#each absenceTypes as |at|}}
+                  <button
+                    type="button"
+                    class={{concat
+                      "btn btn-default"
+                      (if (eq at.id changeset.absenceType.id) " active")
+                    }}
+                    {{on "click" (fn fi.update at)}}
+                  >{{at.name}}</button>
+                {{/each}}
+              </div>
+            </f.input>
+            <f.input @name="date" as |fi|>
+              <PowerCalendar
+                class="calendar"
+                @selected={{get changeset "date.content"}}
+                @center={{(or this.center this.date)}}
+                @onCenterChange={{perform this.setCenter}}
+                @onSelect={{action fi.update value="moment"}}
+                as |calendar|
+              >
+                <div class={{if calendar.loading "loading-mask"}}>
+                  <calendar.Nav />
+                  <calendar.Days
+                    @disabledDates={{this.disabledDatesForEdit}}
+                    @startOfWeek={{1}}
+                  />
+                </div>
+              </PowerCalendar>
+            </f.input>
+            <f.input
+              @type="textarea"
+              @placeholder="Enter comment..."
+              @name="comment"
+            />
+          </modal.body>
+          <modal.footer>
+            <button
+              type="button"
+              class="btn btn-danger"
+              {{on "click" (fn this.deleteAbsence this.absence)}}
+              data-test-edit-absence-delete
+            >Delete</button>
+            <f.submit @label="Save" data-test-edit-absence-save />
+          </modal.footer>
+        </ValidatedForm>
+      </div>
+    </SyModal>
+  {{/let}}
+{{/if}}
+
+{{#let
+  (changeset this.newAbsence this.MultipleAbsenceValidations)
+  as |changeset|
+}}
+  <SyModal
+    @size="auto"
+    @visible={{this.showAddModal}}
+    @on-close={{queue
+      (toggle "showAddModal" this)
+      (fn this.rollback changeset)
+    }}
+    as |modal|
+  >
+    <div data-test-add-absence-form>
+      <ValidatedForm
+        @model={{changeset}}
+        @on-submit={{fn this.addAbsence changeset}}
+        as |f|
+      >
         <modal.header>
-          Edit absence
+          New absence
         </modal.header>
         <modal.body>
           <f.input @name="absenceType" as |fi|>
             <div class="btn-group btn-group--auto">
               {{#each this.absenceTypes as |at|}}
-                <button type="button" class="btn btn-default {{if (eq at.id changeset.absenceType.id) 'active'}}" {{action fi.update at}}>{{at.name}}</button>
+                <button
+                  type="button"
+                  class={{concat
+                    "btn btn-default"
+                    (if (eq at.id changeset.absenceType.id) " active")
+                  }}
+                  {{on "click" (fn fi.update at)}}
+                >{{at.name}}</button>
               {{/each}}
             </div>
           </f.input>
-          <f.input @name="date" as |fi|>
-            <PowerCalendar @class="calendar" @selected={{changeset.date}} @center={{this.center}} @onCenterChange={{perform this.setCenter}} @onSelect={{action fi.update value='moment'}} as |calendar|>
-              <div class={{if calendar.loading 'loading-mask'}}>
-                {{calendar.nav}}
-                <calendar.days @disabledDates={{this.disabledDatesForEdit}} @startOfWeek={{1}} />
-              </div>
-            </PowerCalendar>
-          </f.input>
-          <f.input @type="textarea" @placeholder="Enter comment..." @name="comment" />
-        </modal.body>
-        <modal.footer>
-          <button type="button" class="btn btn-danger" {{action 'deleteAbsence' this.absence}} data-test-edit-absence-delete>Delete</button>
-          <f.submit @label="Save" data-test-edit-absence-save />
-        </modal.footer>
-      </ValidatedForm>
-    </SyModal>
-  {{/with}}
-{{/if}}
-
-{{#with (changeset this.newAbsence this.MultipleAbsenceValidations) as |changeset|}}
-  <SyModal @size='auto' @visible={{this.showAddModal}} @on-close={{action 'rollback' changeset}} as |modal|>
-    <ValidatedForm  @model={{changeset}} @on-submit={{route-action "addAbsence" changeset}} as |f|>
-      <modal.header>
-        New absence
-      </modal.header>
-      <modal.body>
-        <f.input @name="absenceType" as |fi|>
-          <div class="btn-group btn-group--auto">
-            {{#each this.absenceTypes as |at|}}
-              <button type="button" class="btn btn-default {{if (eq at.id changeset.absenceType.id) 'active'}}" {{action fi.update at}}>{{at.name}}</button>
-            {{/each}}
-          </div>
-        </f.input>
-        <f.input @name="dates" as |fi|>
-          <PowerCalendarMultiple
-              @class="calendar"
+          <f.input @name="dates" as |fi|>
+            <PowerCalendarMultiple
+              class="calendar"
               @selected={{changeset.dates}}
               @center={{this.center}}
               @onCenterChange={{perform this.setCenter}}
-              @onSelect={{action fi.update value='moment'}}
+              @onSelect={{fn this.updateSelection changeset "dates"}}
               as |calendar|
-          >
-            <div class={{if calendar.loading 'loading-mask'}}>
-              {{calendar.nav}}
-              <calendar.days @disabledDates={{this.disabledDates}} @startOfWeek={{1}} />
-            </div>
-          </PowerCalendarMultiple>
-        </f.input>
-        <f.input @type="textarea" @placeholder="Enter comment..." @name="comment" />
-      </modal.body>
-      <modal.footer>
-        <f.submit @label="Save" data-test-add-absence-save />
-      </modal.footer>
-    </ValidatedForm>
-    </SyModal>
-{{/with}}
+            >
+              <div class={{if calendar.loading "loading-mask"}}>
+                <calendar.Nav />
+                <calendar.Days
+                  @disabledDates={{this.disabledDates}}
+                  @startOfWeek={{1}}
+                />
+              </div>
+            </PowerCalendarMultiple>
+          </f.input>
+          <f.input
+            @type="textarea"
+            @placeholder="Enter comment..."
+            @name="comment"
+          />
+        </modal.body>
+        <modal.footer>
+          <f.submit @label="Save" data-test-add-absence-save />
+        </modal.footer>
+      </ValidatedForm>
+    </div>
+  </SyModal>
+{{/let}}
