--- a/app/components/user-selection/template.hbs
+++ b/app/components/user-selection/template.hbs
@@ -8,7 +8,7 @@
     tagName            = 'div'
     class              = 'user-select'
     allowClear         = true
-    onChange           = (action this.on-change)
+    onChange           = this.on-change
     extra              = (hash
       lazy             = true
       selectedTemplate = this.selectedTemplate
