refactor(activities): rework time and duration pickers"

--- a/app/index/reports/template.hbs
+++ b/app/index/reports/template.hbs
@@ -1,34 +1,55 @@
 <div class="btn-toolbar btn-toolbar--right form-group">
-  <button type="button" class="btn btn-success" title="Move all entries to another date" data-test-report-reschedule {{action (mut this.showReschedule) true}}>Reschedule</button>
+  <button
+    type="button"
+    class="btn btn-success"
+    title="Move all entries to another date"
+    data-test-report-reschedule
+    {{on "click" (fn (mut this.showReschedule) true)}}
+  >Reschedule</button>
 </div>
 
 <div class="form-list form-list--reports">
   <div class="form-list-body">
     {{#each this.reports as |report|}}
-      {{report-row
-        report
+      <ReportRow
+        @report={{report}}
+        @onSave={{route-action "saveReport"}}
+        @onDelete={{route-action "deleteReport"}}
+        data-test-report-row-id={{report.id}}
         data-test-report-row
-        data-test-report-row-id = report.id
-        on-save                 = (route-action 'saveReport')
-        on-delete               = (route-action 'deleteReport')
-      }}
+      />
     {{/each}}
   </div>
 </div>
 
-{{#sy-modal visible=this.showReschedule size="small" as |modal|}}
+<SyModal @visible={{this.showReschedule}} @size="small" as |modal|>
   <modal.header>
     Reschedule timesheet
   </modal.header>
   <modal.body>
-    <PowerCalendar @class="calendar" @center={{this.center}} @selected={{this.rescheduleDate}} @onCenterChange={{action (mut this.center) value='moment'}} @onSelect={{action (mut this.rescheduleDate) value='moment'}} as |calendar|>
-      <div class={{if calendar.loading 'loading-mask'}}>
+    <PowerCalendar
+      @class="calendar"
+      @center={{this.center}}
+      @selected={{this.rescheduleDate}}
+      @onCenterChange={{action (mut this.center) value="moment"}}
+      @onSelect={{action (mut this.rescheduleDate) value="moment"}}
+      as |calendar|
+    >
+      <div class={{if calendar.loading "loading-mask"}}>
         {{calendar.nav}}
-        <calendar.days @disabledDates={{this.disabledDates}} @startOfWeek={{1}} />
+        <calendar.days
+          @disabledDates={{this.disabledDates}}
+          @startOfWeek={{1}}
+        />
       </div>
     </PowerCalendar>
   </modal.body>
   <modal.footer>
-    <button type="submit" class="btn btn-primary" data-test-report-save {{action 'reschedule' this.rescheduleDate}}>Save</button>
+    <button
+      type="submit"
+      class="btn btn-primary"
+      data-test-report-save
+      {{on "click" (fn this.reschedule this.rescheduleDate)}}
+    >Save</button>
   </modal.footer>
-{{/sy-modal}}
+</SyModal>
