--- a/app/components/sy-durationpicker/template.hbs
+++ b/app/components/sy-durationpicker/template.hbs
@@ -1,4 +1,5 @@
 <input
+  aria-label="duration picker"
   type="text"
   class="form-control"
   pattern={{this.pattern}}
@@ -6,6 +7,7 @@
   maxlength={{this.maxlength}}
   placeholder={{this.placeholder}}
   autocomplete="off"
+  {{on "change" this.change}}
   {{on "keydown" this.handleKeyPress}}
   {{on "focusout" (optional @onFocusOut)}}
 />
