--- a/app/projects/template.hbs
+++ b/app/projects/template.hbs
@@ -5,7 +5,7 @@
     </div>
   {{else}}
     <div class="header">
-      <PowerSelect 
+      <PowerSelect
         data-test-customer-selection
         @tagName="div"
         class="header-item"
@@ -14,17 +14,17 @@
         @searchField="name"
         @onChange={{this.handleCustomerChange}}
         @selected={{this.selectedCustomer}}
-        @allowClear={{true}} 
+        @allowClear={{true}}
         as |customer|
       >
         <div>{{customer.name}}</div>
       </PowerSelect>
       <PowerSelect
-        data-test-project-selection 
+        data-test-project-selection
         @tagName="div"
-        class="header-item" 
+        class="header-item"
         @options={{this.filteredProjects}}
-        placeholder="Select project..." 
+        placeholder="Select project..."
         @searchField="name"
         @onChange={{this.handleProjectChange}}
         @selected={{this.selectedProject}}
@@ -38,44 +38,79 @@
     {{#if this.selectedProject}}
       <h3>
         <span class="header-left">
-          Tasks of {{this.selectedProject.name}}
+          Tasks of
+          {{this.selectedProject.name}}
         </span>
         <span class="header-right">
-          <button class="btn btn-primary" {{action (perform this.createTask)}} data-test-add-task>Add Task</button>
+          <button
+            class="btn btn-primary"
+            {{action (perform this.createTask)}}
+            data-test-add-task
+          >Add Task</button>
         </span>
       </h3>
       <div class="task-table-container">
         <EmberScrollable @class="projects-scrollable-container">
-          <table class="table table--striped table--projects" data-test-tasks-table>
+          <table
+            class="table table--striped table--projects"
+            data-test-tasks-table
+          >
             <thead>
-            <tr>
-              <th>Name</th>
-              <th>Reference</th>
-              <th>Estimated time</th>
-              <th>Archived</th>
-            </tr>
+              <tr>
+                <th>Name</th>
+                <th>Reference</th>
+                <th>Estimated time</th>
+                <th>Archived</th>
+              </tr>
             </thead>
             <tbody>
-            {{#each this.tasks as |task|}}
-              <tr class="pointer {{if (eq this.selectedTask task) "selected"}}" {{action (mut this.selectedTask) task}} data-test-task-table-row>
-                <td data-test-table-name>{{task.name}}</td>
-                <td data-test-table-reference>{{if task.reference task.reference "-"}}</td>
-                <td data-test-table-estimated-time>{{if task.estimatedTime (humanize-duration task.estimatedTime) "-"}}</td>
-                <td><SyCheckmark data-test-table-archived @checked={{task.archived}}/></td>
-              </tr>
-            {{/each}}
+              {{#each this.tasks as |task|}}
+                <tr
+                  class="pointer {{if (eq this.selectedTask task) 'selected'}}"
+                  {{action (mut this.selectedTask) task}}
+                  data-test-task-table-row
+                >
+                  <td data-test-table-name>{{task.name}}</td>
+                  <td data-test-table-reference>{{if
+                      task.reference
+                      task.reference
+                      "-"
+                    }}</td>
+                  <td data-test-table-estimated-time>{{if
+                      task.estimatedTime
+                      (humanize-duration task.estimatedTime)
+                      "-"
+                    }}</td>
+                  <td><SyCheckmark
+                      data-test-table-archived
+                      @checked={{task.archived}}
+                    /></td>
+                </tr>
+              {{/each}}
             </tbody>
           </table>
         </EmberScrollable>
       </div>
       {{#if this.selectedTask}}
         <div class="task-form-container" data-test-task-form>
-          <h2>{{if this.selectedTask.isNew "Add task" this.selectedTask.name}}</h2>
-          <ValidatedForm @model={{changeset this.selectedTask this.TaskValidations}} @on-submit={{perform this.saveTask}} as |f|>
+          <h2>{{if
+              this.selectedTask.isNew
+              "Add task"
+              this.selectedTask.name
+            }}</h2>
+          <ValidatedForm
+            @model={{changeset this.selectedTask this.TaskValidations}}
+            @on-submit={{perform this.saveTask}}
+            as |f|
+          >
             <div class="task-form-container-row">
               <div class="task-form-container-column">
-                <f.input  @label="Name" @name="name" @required={{true}} />
-                <f.input  @label="Reference" @name="reference" @required={{false}} />
+                <f.input @label="Name" @name="name" @required={{true}} />
+                <f.input
+                  @label="Reference"
+                  @name="reference"
+                  @required={{false}}
+                />
               </div>
               <div class="task-form-container-column">
                 <f.input @name="estimatedTime" as |fi|>
@@ -89,21 +124,25 @@
                   }}
                 </f.input>
 
-                <f.input  @name="archived" as |fi|>
+                <f.input @name="archived" as |fi|>
                   <label>
                     Archived
                   </label>
-                  {{sy-checkbox
-                    checked=this.selectedTask.archived
-                    value=fi.value
-                    on-change=fi.update
-                  }}
+                  <SyCheckbox
+                    @checked={{this.selectedTask.archived}}
+                    @value={{fi.value}}
+                    @onChange={{fi.update}}
+                  />
                 </f.input>
               </div>
             </div>
             <div class="btn-toolbar btn-toolbar--right">
-              <button class="btn btn-primary" {{action (mut this.selectedTask) null}} data-test-cancel>Cancel</button>
-              <f.submit  @disabled={{f.model.isInvalid}} />
+              <button
+                class="btn btn-primary"
+                {{action (mut this.selectedTask) null}}
+                data-test-cancel
+              >Cancel</button>
+              <f.submit @disabled={{f.model.isInvalid}} />
             </div>
           </ValidatedForm>
         </div>
@@ -111,7 +150,7 @@
     {{else}}
       <div class="empty" data-test-none-selected>
         <div>
-          {{fa-icon 'search'}}
+          {{fa-icon "search"}}
           <h3>Please select a customer and a project</h3>
         </div>
       </div>
