--- a/app/index/activities/edit/template.hbs
+++ b/app/index/activities/edit/template.hbs
@@ -39,13 +39,13 @@
           data-test-activity-review
           @checked={{this.changeset.review}}
           @label={{"Needs review"}}
-          @onChange={{(fn this.toggle "review")}}
+          @onChange={{toggle "review" this.changeset}}
         />
         <SyCheckbox
           data-test-activity-not-billable
           @checked={{this.changeset.notBillable}}
           @label="Not billable"
-          @onChange={{(fn this.toggle "notBillable")}}
+          @onChange={{toggle "notBillable" this.changeset}}
         />
       </div>
       <table class="table table--striped table--activity-edit">
