--- a/app/index/activities/template.hbs
+++ b/app/index/activities/template.hbs
@@ -18,25 +18,31 @@
       <table class="table table--striped table--activities">
         <tbody>
           {{#each this.sortedActivities as |activity|}}
-          <tr
-            title={{unless activity.transferred "Click to edit"}}
-            data-test-activity-row
-            data-test-activity-row-id={{activity.id}}
-            class="{{if activity.transferred 'transferred' 'pointer'}} {{if activity.active 'primary'}} {{if (eq activity.id this.editId) 'selected'}}"
-            {{on "click" (fn this.editActivity activity)}}
-          >
+            <tr
+              title={{unless activity.transferred "Click to edit"}}
+              data-test-activity-row
+              data-test-activity-row-id={{activity.id}}
+              class="{{if activity.transferred 'transferred' 'pointer'}}
+                {{if activity.active 'primary'}}
+                {{if (eq activity.id this.editId) 'selected'}}"
+              {{on "click" (fn this.editActivity activity)}}
+            >
               <td>
-                {{moment-format activity.from 'HH:mm'}}
+                {{moment-format activity.from "HH:mm"}}
                 -
                 {{#unless activity.active}}
-                  {{moment-format activity.to 'HH:mm'}}
+                  {{moment-format activity.to "HH:mm"}}
                 {{/unless}}
               </td>
-              <td title='{{activity.task.project.customer.name}} > {{activity.task.project.name}} > {{activity.task.name}}'>
+              <td
+                title="{{activity.task.project.customer.name}} > {{activity.task.project.name}} > {{activity.task.name}}"
+              >
                 {{#if activity.task}}
                   <div>
-                    {{activity.task.project.customer.name}} <strong>&gt;</strong>
-                    {{activity.task.project.name}} <strong>&gt;</strong>
+                    {{activity.task.project.customer.name}}
+                    <strong>&gt;</strong>
+                    {{activity.task.project.name}}
+                    <strong>&gt;</strong>
                     {{activity.task.name}}
                   </div>
                 {{else}}
@@ -45,13 +51,15 @@
               </td>
               <td title={{activity.comment}}>
                 <div class="comment-field">{{activity.comment}}</div>
-                {{#if activity.task.project.customerVisible }}
+                {{#if activity.task.project.customerVisible}}
                   <CustomerVisibleIcon class="activity-customer-visible-icon" />
                 {{/if}}
               </td>
               <td>
-                <div><SyCheckmark @checked={{activity.review}} /> Needs review</div>
-                <div><SyCheckmark @checked={{activity.notBillable}} /> Not billable</div>
+                <div><SyCheckmark @checked={{activity.review}} />
+                  Needs review</div>
+                <div><SyCheckmark @checked={{activity.notBillable}} />
+                  Not billable</div>
               </td>
               <td>
                 {{#if activity.active}}
@@ -68,7 +76,7 @@
                     class="btn btn-danger"
                     {{on "click" (fn this.stopActivity activity)}}
                   >
-                    {{fa-icon 'stop'}}
+                    {{fa-icon "stop"}}
                   </button>
                 {{else}}
                   <button
@@ -77,7 +85,7 @@
                     class="btn btn-success"
                     {{on "click" (fn this.startActivity activity)}}
                   >
-                    {{fa-icon 'play'}}
+                    {{fa-icon "play"}}
                   </button>
                 {{/if}}
               </td>
@@ -99,10 +107,29 @@
     Overlapping activities will not be taken into account for the timesheet.
   </modal.body>
   <modal.footer>
-   <button class="btn btn-primary" {{on "click" (if this.showUnknownWarning (fn (mut this.showOverlappingWarning) false) this.generateReports)}}>That's fine</button>
-   <button class="btn btn-default" {{on "click" (queue (fn (mut this.showOverlappingWarning) false) (fn (mut this.showUnknownWarning) false))}}>Cancel</button>
+    <button
+      class="btn btn-primary"
+      {{on
+        "click"
+        (if
+          this.showUnknownWarning
+          (fn (mut this.showOverlappingWarning) false)
+          this.generateReports
+        )
+      }}
+    >That's fine</button>
+    <button
+      class="btn btn-default"
+      {{on
+        "click"
+        (queue
+          (fn (mut this.showOverlappingWarning) false)
+          (fn (mut this.showUnknownWarning) false)
+        )
+      }}
+    >Cancel</button>
   </modal.footer>
-  </SyModal>
+</SyModal>
 
 <SyModal @visible={{this.showUnknownWarning}} as |modal|>
   <modal.header>
@@ -112,7 +139,26 @@
     Unknown tasks will not be taken into account for the timesheet.
   </modal.body>
   <modal.footer>
-   <button class="btn btn-primary" {{on "click" (if this.showOverlappingWarning (fn (mut this.showUnknownWarning) false) this.generateReports)}}>That's fine</button>
-   <button class="btn btn-default" {{on "click" (queue (fn (mut this.showUnknownWarning) false) (fn (mut this.showOverlappingWarning) false))}}>Cancel</button>
+    <button
+      class="btn btn-primary"
+      {{on
+        "click"
+        (if
+          this.showOverlappingWarning
+          (fn (mut this.showUnknownWarning) false)
+          this.generateReports
+        )
+      }}
+    >That's fine</button>
+    <button
+      class="btn btn-default"
+      {{on
+        "click"
+        (queue
+          (fn (mut this.showUnknownWarning) false)
+          (fn (mut this.showOverlappingWarning) false)
+        )
+      }}
+    >Cancel</button>
   </modal.footer>
 </SyModal>
