--- a/app/index/activities/edit/template.hbs
+++ b/app/index/activities/edit/template.hbs
@@ -4,11 +4,11 @@
       <LinkTo @route="index.activities">{{fa-icon 'chevron-left'}}</LinkTo>
     </div>
     <div class="card-block">
-      {{#task-selection task=this.changeset.task as |t|}}
+      <TaskSelection @task={{this.changeset.task}} as |t|>
         <div class="form-group">{{t.customer}}</div>
         <div class="form-group">{{t.project}}</div>
         <div class="form-group">{{t.task}}</div>
-      {{/task-selection}}
+      </TaskSelection>
       <div class="form-group">
         <input
           type="text"
