--- a/app/components/optimized-power-select/options/template.hbs
+++ b/app/components/optimized-power-select/options/template.hbs
@@ -18,6 +18,7 @@
     @items={{@options}}
     @estimateHeight={{30}}
     @bufferSize={{5}}
+    @renderAll={{this.isTesting}}
     as |option index|
   >
     <li
