fix: protected route events
* handle finished and loading events correctly
* make loader visible via z-index 9999

--- a/app/protected/template.hbs
+++ b/app/protected/template.hbs
@@ -6,3 +6,10 @@
     {{outlet}}
   </div>
 </main>
+
+<WelcomeModal
+  @visible={{this.visible}}
+  @on-never={{this.neverTour}}
+  @on-later={{this.laterTour}}
+  @on-start={{this.startTour}}
+/>
