--- a/app/styles/loader.scss
+++ b/app/styles/loader.scss
@@ -5,10 +5,11 @@
   top: 0;
   right: 0;
   left: 0;
+  z-index: 9999;
   overflow: hidden;
   background-color: #ddd;
 }
-.loader:before{
+.loader:before {
   display: block;
   position: absolute;
   content: "";
@@ -20,10 +21,23 @@
 }
 
 @keyframes loading {
-    from { left: -200px; width: 30%; }
-    50%  {               width: 30%; }
-    70%  {               width: 70%; }
-    80%  { left: 50%;                }
-    95%  { left: 120%;               }
-    to   { left: 100%;               }
+  from {
+    left: -200px;
+    width: 30%;
+  }
+  50% {
+    width: 30%;
+  }
+  70% {
+    width: 70%;
+  }
+  80% {
+    left: 50%;
+  }
+  95% {
+    left: 120%;
+  }
+  to {
+    left: 100%;
+  }
 }
